# qa-regulations

./: .gitignore  app.py  data_loader.py  data_processor.py  dictionaries.json  pyproject.toml  stream.py
pages/: 1_Upload Files.py  1_Upload Regulations.py
tests/: test_main.py
utils/: processes.py
